News UAT/force-app/main/default/objects/Product_Order__c/fields/Facebook_Page_Access_Available__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Page_Access_Available__c</fullName>
    <label>Facebook Page Access Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>