News UAT/force-app/main/default/objects/Product_Order__c/fields/Facebook_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Page_URL__c</fullName>
    <label>Facebook Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>