News UAT/force-app/main/default/objects/Product_Order__c/fields/First_Day_of_the_Last_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Day_of_the_Last_Calendar_Month__c</fullName>
    <formula>IF( ISBLANK( Flight_Period_End_Date__c ) , DATE 
( 
YEAR( Product_Order_End_Date__c ) , 
MONTH( Product_Order_End_Date__c ), 1), DATE 
( 
YEAR( Flight_Period_End_Date__c ) , 
MONTH( Flight_Period_End_Date__c ), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Day of the Last Calendar Month</label>
    <type>Date</type>
</CustomField>