News UAT/force-app/main/default/objects/Product_Order__c/fields/Flight_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Period_End_Date__c</fullName>
    <formula>Order__r.Flight_Period_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Period End Date</label>
    <type>Date</type>
</CustomField>