News UAT/force-app/main/default/objects/Product_Order__c/fields/Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Type__c</fullName>
    <formula>Product_Node__r.Product_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Type</label>
    <type>Text</type>
</CustomField>