News UAT/force-app/main/default/objects/Product_Order__c/fields/GA_UA_ID__c.field-meta.xml
<CustomField>
    <fullName>GA_UA_ID__c</fullName>
    <label>GA UA ID#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>