News UAT/force-app/main/default/objects/Product_Order__c/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <label>Goal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completion Rate</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>CPCL</fullName>
            </value>
            <value>
                <fullName>CPCV</fullName>
            </value>
            <value>
                <fullName>CPE</fullName>
            </value>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>CPM</fullName>
            </value>
            <value>
                <fullName>CPV</fullName>
            </value>
            <value>
                <fullName>CTR</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Fans</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Plays</fullName>
            </value>
            <value>
                <fullName>Reach</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>ROAS</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Video Views</fullName>
            </value>
            <value>
                <fullName>Views</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>