News UAT/force-app/main/default/objects/Product_Order__c/fields/Google_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_URL__c</fullName>
    <label>Google URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>