News UAT/force-app/main/default/objects/Product_Order__c/fields/Has_Campaign_Run_For_Minimum_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Has_Campaign_Run_For_Minimum_12_Months__c</fullName>
    <formula>IF( 
TODAY() - Product_Order_Start_Date__c &lt;365, 
false, 
true 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Campaign Run For Minimum 12 Months?</label>
    <type>Checkbox</type>
</CustomField>