News UAT/force-app/main/default/objects/Product_Order__c/fields/Impressions_Factor__c.field-meta.xml
<CustomField>
    <fullName>Impressions_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <label>Impressions Factor</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>