News UAT/force-app/main/default/objects/Product_Order__c/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <formula>Order__r.Industry_CodeCO__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Code</label>
    <type>Text</type>
</CustomField>