News UAT/force-app/main/default/objects/Product_Order__c/fields/Industry_Code_Division__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_Division__c</fullName>
    <description>DUMMY FIELD DO NOT MIGRATE</description>
    <formula>Order__r.Sales_Order__r.csmso__Opportunity__r.Account.Industry_Code__r.Division__c</formula>
    <inlineHelpText>DUMMY FIELD DO NOT MIGRATE</inlineHelpText>
    <label>Industry Code Division</label>
    <type>Text</type>
</CustomField>