News UAT/force-app/main/default/objects/Product_Order__c/fields/Industry_Code_Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_Subdivision__c</fullName>
    <description>DUMMY FIELD DO NOT MIGRATE</description>
    <formula>Order__r.Sales_Order__r.csmso__Opportunity__r.Account.Industry_Code__r.Subdivision__c</formula>
    <inlineHelpText>DUMMY FIELD DO NOT MIGRATE</inlineHelpText>
    <label>Industry Code Subdivision</label>
    <type>Text</type>
</CustomField>