News UAT/force-app/main/default/objects/Product_Order__c/fields/Integration_User__c.field-meta.xml
<CustomField>
    <fullName>Integration_User__c</fullName>
    <formula>Order__r.Integration_User__r.LastName</formula>
    <label>Integration User</label>
    <type>Text</type>
</CustomField>