News UAT/force-app/main/default/objects/Product_Order__c/fields/IO_Impressions_Override__c.field-meta.xml
<CustomField>
    <fullName>IO_Impressions_Override__c</fullName>
    <description>Adjustment quantity for IO Impressions</description>
    <inlineHelpText>Adjustment quantity for IO Impressions</inlineHelpText>
    <label>Make Good Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>