News UAT/force-app/main/default/objects/Product_Order__c/fields/IO_Margin__c.field-meta.xml
<CustomField>
    <fullName>IO_Margin__c</fullName>
    <formula>IF(Product_Node__r.Network__c == &#39;Facebook&#39;, 0.35,  
IF(Product_Node__r.Network__c == &#39;Acquisio&#39;, 0.2, 
IF(Product_Node__r.Name  == &#39;NX - Blended programmatic (Display/Mobile/Retargeting) - Media spend - $10000 +&#39;, 0.5, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IO Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>