News UAT/force-app/main/default/objects/Product_Order__c/fields/IO_Months__c.field-meta.xml
<CustomField>
    <fullName>IO_Months__c</fullName>
    <formula>ROUND( (Product_Order_End_Date_Buy_Sheet__c - Proposed_Start_Date__c)/31,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IO Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>