News UAT/force-app/main/default/objects/Product_Order__c/fields/IO_Total_Booked_Revenue__c.field-meta.xml
<CustomField>
    <fullName>IO_Total_Booked_Revenue__c</fullName>
    <formula>IF(ISBLANK(Retail_Rate__c) , 0, Retail_Rate__c) * if( ISBLANK( Cancellation_Date__c ),IO_Months__c,((Cancellation_Date__c- Proposed_Start_Date__c + 1)/30.4) )
+  Make_Good_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IO Total Booked Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>