News UAT/force-app/main/default/objects/Product_Order__c/fields/IO_Total_Impressions__c.field-meta.xml
<CustomField>
    <fullName>IO_Total_Impressions__c</fullName>
    <formula>ROUND( 
    Monthly_Impression_Goal__c * 
    IF( ISBLANK( Cancellation_Date__c ) , 
    IO_Months__c , 
    ( Cancellation_Date__c - Proposed_Start_Date__c + 1)/ 30.4 ) 
     ,0)
+  IO_Impressions_Override__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IO Total Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>