News UAT/force-app/main/default/objects/Product_Order__c/fields/Is_Assigned_To_Me_As_Social_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_To_Me_As_Social_Owner__c</fullName>
    <formula>IF( Assigned_Social_Owner__c = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned To Me As Social Owner</label>
    <type>Checkbox</type>
</CustomField>