News UAT/force-app/main/default/objects/Product_Order__c/fields/Is_Content_Plan_Sufficient__c.field-meta.xml
<CustomField>
    <fullName>Is_Content_Plan_Sufficient__c</fullName>
    <label>Is Content Plan Feedback Sufficient?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>