News UAT/force-app/main/default/objects/Product_Order__c/fields/Is_Creative_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Creative_Required__c</fullName>
    <label>Is Creative Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>