News UAT/force-app/main/default/objects/Product_Order__c/fields/Keyword_Analysis_Report_Available__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Analysis_Report_Available__c</fullName>
    <label>Keyword Analysis Report Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>