News UAT/force-app/main/default/objects/Product_Order__c/fields/Landing_Page_URL_Published__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_URL_Published__c</fullName>
    <label>Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>