News UAT/force-app/main/default/objects/Product_Order__c/fields/Last_Day_of_the_First_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_the_First_Calendar_Month__c</fullName>
    <formula>DATE
(  
	YEAR( Product_Order_Start_Date__c  ) ,
	MONTH( Product_Order_Start_Date__c ),
	CASE( MONTH(Product_Order_Start_Date__c), 
		1, 31, 
		2, IF( MOD( YEAR(Product_Order_Start_Date__c) + 1, 4) = 0, 29, 28), 
		3, 31, 
		4, 30, 
		5, 31, 
		6, 30, 
		7, 31, 
		8, 31, 
		9, 30, 
		10, 31, 
		11, 30, 
		12, 31, 
		0 
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of the First Calendar Month</label>
    <type>Date</type>
</CustomField>