News UAT/force-app/main/default/objects/Product_Order__c/fields/Line_Item_Name_String__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Name_String__c</fullName>
    <formula>IF(ISBLANK( Line_Item_Name_String_Override__c),
   (
    Order__r.Sales_Order__r.Name &amp; 
    IF(Order__r.Evergreen__c , &#39;E&#39;, &#39;&#39;) &amp; &quot; - &quot; &amp; 
    IF(ISBLANK(Advertiser_Name_Override__c),
       Account_Name__c,
       Advertiser_Name_Override__c)&amp; &quot; - &quot; &amp; 
    TEXT(YEAR(Proposed_Start_Date__c))+&quot;-&quot; +LPAD(TEXT(MONTH(Proposed_Start_Date__c)),2,&quot;0&quot;)&amp; 
    IF(ISBLANK(Product_Node__r.Product_Code_For_BuySheet__c),
       &quot;&quot;,
       &quot; - &quot; &amp; Product_Node__r.Product_Code_For_BuySheet__c)
   ),
   Line_Item_Name_String_Override__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Name String</label>
    <type>Text</type>
</CustomField>