News UAT/force-app/main/default/objects/Product_Order__c/fields/Line_Item_Name_String_Override__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Name_String_Override__c</fullName>
    <description>Manual override for Line Item Name String</description>
    <inlineHelpText>Manual override for Line Item Name String</inlineHelpText>
    <label>Line Item Name String Override</label>
    <length>100</length>
    <type>Text</type>
</CustomField>