News UAT/force-app/main/default/objects/Product_Order__c/fields/Live_QA_Passed__c.field-meta.xml
<CustomField>
    <fullName>Live_QA_Passed__c</fullName>
    <label>Live QA Passed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>