News UAT/force-app/main/default/objects/Product_Order__c/fields/Make_Good_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Make_Good_Revenue__c</fullName>
    <description>Adjustment quantity for IO Booked Revenue</description>
    <inlineHelpText>Adjustment quantity for IO Booked Revenue</inlineHelpText>
    <label>Make Good Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>