News UAT/force-app/main/default/objects/Product_Order__c/fields/Monthly_Click_Goal_Factor__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Click_Goal_Factor__c</fullName>
    <formula>Monthly_Click_Goal__c * Impressions_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Click Goal * Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>