News UAT/force-app/main/default/objects/Product_Order__c/fields/Monthly_Spend_Goal__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Spend_Goal__c</fullName>
    <label>Monthly Spend Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>