News UAT/force-app/main/default/objects/Product_Order__c/fields/My_Teams_PO_Social__c.field-meta.xml
<CustomField>
    <fullName>My_Teams_PO_Social__c</fullName>
    <formula>IF(CONTAINS( $UserRole.Name ,&#39;Campaign-Social&#39;) &amp;&amp; (CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;Campaign&#39;) || CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;Social&#39;)), true, IF(CONTAINS( $UserRole.Name ,&#39;Social&#39;) &amp;&amp; CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;Xtend - Social&#39;), true , IF(CONTAINS( $UserRole.Name ,&#39;Campaign L2&#39;), IF(CONTAINS( $UserRole.Name ,&#39;KA-North&#39;),CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;Team KA&#39;) || CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;Team North&#39;) || Assigned_Social_Owner__r.Id = $User.Id, CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;Team DSP&#39;) || CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;Team South&#39;) || Assigned_Social_Owner__r.Id = $User.Id) , IF(CONTAINS( $UserRole.Name ,&#39;SEM L1&#39;) &amp;&amp; CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;SEM&#39;), true, IF(CONTAINS( $UserRole.Name ,&#39;SEM L2&#39;) &amp;&amp; CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;SEM&#39;) &amp;&amp; NOT(CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;L1&#39;)), IF(NOT(CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;L2&#39;)), true, Assigned_Social_Owner__r.Id = $User.Id) , IF(CONTAINS( $UserRole.Name ,&#39;Programmatic L1&#39;) &amp;&amp; CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;Programmatic&#39;), true , IF(CONTAINS($UserRole.Name,&#39;Programmatic L2&#39;) &amp;&amp; CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;Programmatic&#39;),((NOT(CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;L2&#39;))&amp;&amp;((CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;KA&#39;) &amp;&amp; CONTAINS($UserRole.Name,&#39;KA&#39;)) || (CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;NSW&#39;) &amp;&amp; CONTAINS($UserRole.Name,&#39;NSW&#39;)) || (CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;QLD&#39;) &amp;&amp; CONTAINS($UserRole.Name,&#39;QLD&#39;)) || (CONTAINS(Assigned_Social_Owner__r.UserRole.Name,&#39;VIC/SA&#39;) &amp;&amp; CONTAINS($UserRole.Name,&#39;VIC/SA&#39;)))) || Assigned_Social_Owner__r.Id = $User.Id), Assigned_Social_Owner__r.Id = $User.Id) ) ) )) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Teams PO(Social)</label>
    <type>Checkbox</type>
</CustomField>