News UAT/force-app/main/default/objects/Product_Order__c/fields/Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Name__c</fullName>
    <description>Same value is in Product Configuration Attribute  with Name of Network Name. Required for Buy Sheet Extract. Populated by a trigger.</description>
    <inlineHelpText>Same value is in Product Configuration Attribute  with Name of Network Name</inlineHelpText>
    <label>Network Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>