News UAT/force-app/main/default/objects/Product_Order__c/fields/New_Creative_Pushed_Count__c.field-meta.xml
<CustomField>
    <fullName>New_Creative_Pushed_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Creative Pushed Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>