News UAT/force-app/main/default/objects/Product_Order__c/fields/News_Xtend_Product_Ref__c.field-meta.xml
<CustomField>
    <fullName>News_Xtend_Product_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>News Xtend Product Ref</label>
    <referenceTo>News_Xtend_Product_Ref__c</referenceTo>
    <relationshipLabel>Product Orders</relationshipLabel>
    <relationshipName>Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>