News UAT/force-app/main/default/objects/Product_Order__c/fields/Next_Business_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Business_Date__c</fullName>
    <description>Next working day calculated x days from the time status changed to &#39;Live&#39;. x here comes from a custom label</description>
    <label>Next Business Date</label>
    <type>Date</type>
</CustomField>