News UAT/force-app/main/default/objects/Product_Order__c/fields/Next_Business_Date_Landing__c.field-meta.xml
<CustomField>
    <fullName>Next_Business_Date_Landing__c</fullName>
    <label>Next Business Date Landing</label>
    <type>Date</type>
</CustomField>