News UAT/force-app/main/default/objects/Product_Order__c/fields/Next_Optimisation_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Optimisation_Date__c</fullName>
    <label>Next Optimisation Date</label>
    <type>Date</type>
</CustomField>