News UAT/force-app/main/default/objects/Product_Order__c/fields/Next_Social_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Next_Social_Go_Live__c</fullName>
    <label>Next Social Go Live</label>
    <type>Date</type>
</CustomField>