News UAT/force-app/main/default/objects/Product_Order__c/fields/Next_Social_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Next_Social_Kick_Off__c</fullName>
    <label>Next Social Kick Off</label>
    <type>Date</type>
</CustomField>