News UAT/force-app/main/default/objects/Product_Order__c/fields/One_Month_Before_Social_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>One_Month_Before_Social_Kick_Off__c</fullName>
    <label>One Month Before Social Kick Off</label>
    <type>Date</type>
</CustomField>