News UAT/force-app/main/default/objects/Product_Order__c/fields/Other_URL__c.field-meta.xml
<CustomField>
    <fullName>Other_URL__c</fullName>
    <label>Other URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>