News UAT/force-app/main/default/objects/Product_Order__c/fields/PC_Id__c.field-meta.xml
<CustomField>
    <fullName>PC_Id__c</fullName>
    <label>PC Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>