News UAT/force-app/main/default/objects/Product_Order__c/fields/Peer_Review_Passed__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Passed__c</fullName>
    <label>Peer Review Passed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>