News UAT/force-app/main/default/objects/Product_Order__c/fields/Post_Go_live_review__c.field-meta.xml
<CustomField>
    <fullName>Post_Go_live_review__c</fullName>
    <label>Post Go-live Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>