News UAT/force-app/main/default/objects/Product_Order__c/fields/Previous_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Campaign_Status__c</fullName>
    <label>Previous Campaign Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>