News UAT/force-app/main/default/objects/Product_Order__c/fields/Previous_End_Date_Buy_Sheet_add_1_year__c.field-meta.xml
<CustomField>
    <fullName>Previous_End_Date_Buy_Sheet_add_1_year__c</fullName>
    <formula>ADDMONTHS(Product_Order_End_Date_Buy_Sheet__c ,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous End Date Buy Sheet add 1 year</label>
    <type>Date</type>
</CustomField>