News UAT/force-app/main/default/objects/Product_Order__c/fields/Previous_End_Date_Buy_Sheet_add_1y__c.field-meta.xml
<CustomField>
    <fullName>Previous_End_Date_Buy_Sheet_add_1y__c</fullName>
    <defaultValue>365</defaultValue>
    <label>Previous End Date Buy Sheet add 1y</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>