News UAT/force-app/main/default/objects/Product_Order__c/fields/Previous_End_Date_Buy_Sheet_subtract_7d__c.field-meta.xml
<CustomField>
    <fullName>Previous_End_Date_Buy_Sheet_subtract_7d__c</fullName>
    <formula>Product_Order_End_Date_Buy_Sheet__c - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous End Date Buy Sheet subtract 7d</label>
    <type>Date</type>
</CustomField>