News UAT/force-app/main/default/objects/Product_Order__c/fields/Previous_End_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Previous_End_Date_Override__c</fullName>
    <description>Manual override for Previous End Date</description>
    <inlineHelpText>Manual override for Previous End Date</inlineHelpText>
    <label>Previous End Date Override</label>
    <type>Date</type>
</CustomField>