News UAT/force-app/main/default/objects/Product_Order__c/fields/Previous_Product_Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Product_Order_Start_Date__c</fullName>
    <description>Product Order start date before the sales order got retracted</description>
    <inlineHelpText>Product Order start date before the sales order got retracted</inlineHelpText>
    <label>Previous Product Order Start Date</label>
    <type>Date</type>
</CustomField>